--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"postcss": "^8.3.11",
 		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.8",
+		"tailwind-scrollbar": "^1.3.1",
 		"tailwindcss": "^3.0.23",
 		"typescript": "~4.4.3"
 	}
