--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@tailwindcss/forms": "^0.5.0",
         "@tailwindcss/typography": "^0.5.2",
         "angular-svg-icon": "^13.0.0",
+        "apexcharts": "^3.35.3",
+        "ng-apexcharts": "^1.7.1",
         "rxjs": "~7.4.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
