fix: source assets

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets/*"
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
@@ -98,7 +98,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets/*"
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
