--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,10 @@
 {
-	"useTabs": true,
-	"bracketSameLine": true,
-	"trailingComma": "es5",
-	"tabWidth": 4,
-	"semi": false,
-	"singleQuote": true,
-	"printWidth": 120
+  "useTabs": true,
+  "bracketSameLine": true,
+  "bracketSpacing": true,
+  "trailingComma": "all",
+  "tabWidth": 4,
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 140
 }
