--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
 {
-    "name": "finance",
-    "version": "0.1.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --open",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "ng test",
-        "prettier:check": "npx prettier . --check",
-        "prettier:write": "npx prettier . --write"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~13.3.0",
-        "@angular/common": "~13.3.0",
-        "@angular/compiler": "~13.3.0",
-        "@angular/core": "~13.3.0",
-        "@angular/forms": "~13.3.0",
-        "@angular/platform-browser": "~13.3.0",
-        "@angular/platform-browser-dynamic": "~13.3.0",
-        "@angular/router": "~13.3.0",
-        "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/forms": "^0.5.0",
-        "@tailwindcss/typography": "^0.5.2",
-        "angular-svg-icon": "^13.0.0",
-        "apexcharts": "^3.35.3",
-        "ng-apexcharts": "^1.7.1",
-        "rxjs": "~7.4.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~13.3.0",
-        "@angular/cli": "~13.3.0",
-        "@angular/compiler-cli": "~13.3.0",
-        "@types/jasmine": "~3.10.0",
-        "@types/node": "^12.11.1",
-        "autoprefixer": "^10.4.4",
-        "jasmine-core": "~3.10.0",
-        "karma": "~6.3.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "~1.7.0",
-        "postcss": "^8.3.11",
-        "prettier": "^2.6.2",
-        "prettier-plugin-tailwindcss": "^0.1.8",
-        "tailwind-scrollbar": "^1.3.1",
-        "tailwindcss": "^3.0.23",
-        "typescript": "~4.4.3"
-    }
+  "name": "finance",
+  "version": "0.1.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --open",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "prettier:check": "npx prettier . --check",
+    "prettier:write": "npx prettier . --write"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/router": "^14.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "angular-svg-icon": "^13.0.0",
+    "apexcharts": "^3.35.3",
+    "ng-apexcharts": "^1.7.1",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.4",
+    "jasmine-core": "~3.10.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.3.11",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.0.23",
+    "typescript": "~4.7.4"
+  }
 }
