--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,11 @@
 {
-  "useTabs": true,
+  "useTabs": false,
   "bracketSameLine": true,
   "bracketSpacing": true,
   "trailingComma": "all",
-  "tabWidth": 4,
-  "semi": false,
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "printWidth": 140
+  "quoteProps": "as-needed",
+  "printWidth": 120
 }
