--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-tailwind",
+  "displayName": "Angular Tailwind",
   "version": "0.1.1",
   "description": "Angular & Tailwind CSS Admin Dashboard Starter Kit, Free and Open Source",
   "homepage": "https://github.com/luciano-work/angular-tailwind#readme",
