--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "~12.1.3",
     "@angular/router": "~12.1.3",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@types/crypto-js": "^4.2.2",
     "chart.js": "^2.9.4",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "ng-chartjs": "^0.2.1",
@@ -49,7 +51,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "^6.3.20",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
