--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "~12.1.3",
     "@angular/router": "~12.1.3",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ngrx/store": "^12.5.1",
+    "@ngrx/store-devtools": "^12.5.1",
     "@types/crypto-js": "^4.2.2",
     "chart.js": "^2.9.4",
     "crypto-js": "^4.2.0",
