--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~12.1.3",
     "@angular/common": "~12.1.3",
     "@angular/compiler": "~12.1.3",
@@ -27,6 +28,7 @@
     "@ngrx/store": "^12.5.1",
     "@ngrx/store-devtools": "^12.5.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/googlemaps": "^3.43.3",
     "chart.js": "^2.9.4",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.16.1",
